# omn

./: .gitignore  README.md  contributions.txt  download_data.sh  introduction.md  plan.md  project_documentation.md  upload.sh
data/exploration_1/: metadata.yaml
data/exploration_18_06_2026-1/: metadata.yaml
data/exploration_2/: metadata.yaml
data/manual_exploration/: metadata.yaml
fixme/robot_manager/: INTERFACES.md
fixme/robot_manager/src/mock_lifecycle_nodes/: setup.py
fixme/robot_manager/src/system_manager/: package.xml  setup.cfg  setup.py
fixme/robot_manager/src/system_manager/config/: dashboard.rviz  managed_nodes.yaml
fixme/robot_manager/src/system_manager/system_manager/: dashboard_backend.py  health_monitor.py  task_scheduler.py
fixme/robot_manager/src/system_manager_msgs/: package.xml
ros2-documentation/.obsidian/: workspace.json
ros2-documentation/ros2-jazzy-wiki/: AGENTS.md  README.md  SUMMARY.md  index.md  llms.txt  manifest.json
ros2-documentation/ros2-jazzy-wiki/assets/downloads/: discovery_packets.py
ros2-documentation/ros2-jazzy-wiki/content/concepts/: advanced.md  basic.md  intermediate.md  overview.md
ros2-documentation/ros2-jazzy-wiki/content/getting-started/: about-ros.md  first-steps.md  ros-2-documentation.md
ros2-documentation/ros2-jazzy-wiki/content/how-to/: ament-cmake-documentation.md  ament-cmake-python-documentation.md  building-a-custom-deb-package.md  building-ros-2-with-tracing.md  configure-zero-copy-loaned-messages.md  core-maintainer-guide.md  cross-compilation.md  dds-tuning.md  developing-a-ros-2-package.md  documenting-a-ros-2-package.md  getting-backtraces-in-ros-2.md  installation-troubleshooting.md  installing-on-raspberry-pi.md  launch-file-different-formats.md  launching-composable-nodes.md  migrating-from-ros1.md  node-arguments.md  overriding-qo-s-policies-for-recording-and-playback.md  overview.md  ros-2-ides.md  run-2-nodes-in-single-or-separate-docker-containers.md  setup-ros-2-with-vscode-and-docker-container.md  sync-vs-async.md  using-callback-groups.md  using-custom-rosdistro.md  using-python-packages.md  using-ros1-bridge-jammy-upstream.md  using-ros2-param.md  using-variants.md  visualizing-ros-2-data-with-foxglove-studio.md  working-with-multiple-rmw-implementations.md
ros2-documentation/ros2-jazzy-wiki/content/installation/: alternatives.md  maintaining-a-source-checkout.md  overview.md  rhel-install-rpms.md  rmw-implementations.md  ros-2-mirrors.md  testing.md  ubuntu-install-debs.md  windows-install-binary.md
ros2-documentation/ros2-jazzy-wiki/content/project/: adopters.md  contributing.md  feature-ideas.md  (+10 more)
ros2-documentation/ros2-jazzy-wiki/wiki/: concept-map.md  task-map.md  tooling-map.md  troubleshooting-map.md  tutorial-paths.md
ros_ws/: build.sh  kill_ros.sh  my_map_1.pgm  run_basic_navigation.sh  run_exploration.sh  slam.yaml  slam_1.yaml
ros_ws/src/: .gitignore
ros_ws/src/basic_navigation/: package.xml  setup.cfg  setup.py
ros_ws/src/collision_avoidance/: package.xml  setup.py
ros_ws/src/collision_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/exploration/: package.xml  setup.py
ros_ws/src/follow_red/: package.xml  setup.cfg  setup.py
ros_ws/src/localization/: package.xml  setup.py
ros_ws/src/navigation/: README.md  package.xml  setup.py
ros_ws/src/navigation2/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/navigation_gazebo/: README.md  package.xml  setup.py
ros_ws/src/navigation_gazebo/launch/: nav_smoke_gazebo.launch.py
ros_ws/src/navigation_gazebo/maps/: my_map_1.pgm  nav_smoke_map.pgm  nav_smoke_map.yaml
ros_ws/src/navigation_gazebo/navigation_gazebo/: map_service_to_topic.py  odom_to_pos.py  target_vector_to_cmd_vel.py
ros_ws/src/navigation_gazebo/rviz/: planned_path.rviz
ros_ws/src/navigation_gazebo/worlds/: my_map_1.sdf  nav_smoke.sdf
ros_ws/src/navigation_gazebo2/: package.xml  setup.cfg  setup.py
ros_ws/src/robot-manager/: README.md
ros_ws/src/robot_manager/: README.md  ROBOT_MANAGER_WORKFLOW.md  TESTING.md  package.xml  setup.cfg  setup.py
ros_ws/src/robot_manager/launch/: robot_manager.launch.py
ros_ws/src/robot_manager/robot_manager/: dashboard_server.py  health_monitor.py  lifecycle.py  pose_publisher.py  robot_manager_node.py  sim_backend.py  slam_metrics.py  task_manager.py
ros_ws/src/robot_manager/robot_manager/web/: app.js  index.html  style.css
ros_ws/src/robot_manager/src/mock_lifecycle_nodes/: package.xml  setup.cfg
ros_ws/src/robot_manager/src/mock_lifecycle_nodes/launch/: mock_nodes.launch.py  mock_nodes_with_rviz.launch.py
ros_ws/src/robot_manager/src/system_manager/launch/: combined.launch.py  system_manager.launch.py
ros_ws/src/robot_manager/src/system_manager/system_manager/: lifecycle_manager.py  orchestrator_node.py  recovery_manager.py  robot_state_machine.py
ros_ws/src/robot_manager/src/system_manager_msgs/: CMakeLists.txt
ros_ws/src/robot_manager/src/system_manager_msgs/msg/: SystemHealth.msg  TaskStatus.msg
ros_ws/src/slam/: README.md  my_map.pgm  my_map.yaml  package.xml  roboter.urdf  setup.py
ros_ws/src/system_manager/: README.md  package.xml  setup.cfg  setup.py
(+225 files in other folders)
