<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_manager</name>
  <version>1.0.0</version>
  <description>
    Supervisory robot manager for the OMN Tortugabot stack: full mission
    lifecycle (initialize, map, navigate), component health monitoring,
    task management and a built-in web dashboard with live localization
    and SLAM performance.
  </description>
  <maintainer email="jassimhameed007@gmail.com">OMN team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
