<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_manager</name>
  <version>0.1.0</version>
  <description>
    System Manager: lifecycle orchestration, health monitoring, recovery
    management, task scheduling and dashboard backend for the robot.
    This package does NOT process sensors or run navigation -- it only
    manages the ROS2 LifecycleNodes that teammates implement.
  </description>
  <maintainer email="you@example.com">Shein</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>system_manager_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
